trying to fix the big problem with jQuery UI modals (if modals have the same z-index, it causes weird behaviours) (WIP)

--- a/app/assets/stylesheets/locomotive/backoffice/dialog_changes.css.scss
+++ b/app/assets/stylesheets/locomotive/backoffice/dialog_changes.css.scss
@@ -60,7 +60,7 @@
 
   .ui-dialog-content {
     position: relative;
-    z-index: 999;
+    z-index: 1040;
 
     text-align: left;
 
